@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Add ::ResultSet::Shortcut::HasRows (Wallas Reis)
+       - Add ::ResultSet::Shortcut::Limit (Wallas Reis)
        - make ::ResultSet::Me more flexible (moltar)
        - Fix some warnings (when using deprecated modules) (good catch Bill
          Mosely)
